--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dexie": "^4.0.11",
     "dexie-react-hooks": "^1.1.7",
     "install": "^0.13.0",
+    "jotai": "^2.12.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwindcss": "^4.0.6"
