--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.0",
+    "@heroicons/react": "^2.2.0",
     "@material-tailwind/react": "^2.1.10",
     "@tailwindcss/vite": "^4.0.6",
     "@tanstack/react-router": "^1.106.0",
     "@types/node": "^22.13.4",
     "dexie": "^4.0.11",
     "dexie-react-hooks": "^1.1.7",
-    "install": "^0.13.0",
     "jotai": "^2.12.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
