--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dexie": "^4.0.11",
     "dexie-react-hooks": "^1.1.7",
     "jotai": "^2.12.1",
+    "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwindcss": "^4.0.6"
